src/pages/fr/v1.11.0/plugins/pinia.mdx
---
titre: "Pinia"
metaTitle: "Pinia"
metaDescription: "Plugin Pinia pour OpenReplay."
---
importer Aside de '~/components/Aside.astro'

Ce plugin vous permet de capturer les mutations/états `Pinia` et de les inspecter plus tard lors de la lecture des enregistrements de session. Cela est très utile pour comprendre et résoudre les problèmes.

<Aside type="tip">
Nous avons également un tutoriel détaillé sur la façon d'utiliser le plugin Pinia pour capturer l'état de votre application lors de l'utilisation de cette bibliothèque, vous pouvez le consulter ici ( /tutorials/pinia).
</Aside>

## Installation


```bash
npm i @openreplay/tracker-vuex
```


## Utilisation

Initialisez le package `@openreplay/tracker` comme d'habitude et chargez le plugin dans celui-ci. Appelez le plugin et définissez le nom du magasin, cela retournera une instance de suivi de magasin nommée que vous pouvez appeler avec votre exemplaire de magasin en argument pour activer le suivi de ce magasin.

### Si votre site Web est une application Web à page unique (SPA)


```js
import OpenReplay from '@openreplay/tracker';
import trackerVuex from '@openreplay/tracker-vuex';
```


### Si votre application Web est rendue côté serveur (SSR)


```js
import OpenReplay from '@openreplay/tracker/cjs';
import trackerVuex from '@openreplay/tracker-vuex/cjs';
```


### Suivi du magasin Pinia


```js

//...

const tracker = new OpenReplay({
  projectKey: PROJECT_KEY
  // ... options
});

// ...

const examplePiniaStore = useExamplePiniaStore()
const vuexPlugin = tracker.use(trackerVuex(<options>)) // check list of available options below

const piniaStorePlugin = vuexPlugin('STORE NAME') // add a name to your store, 
                                                  // optional (will be randomly generated otherwise)
piniaStorePlugin(examplePiniaStore) // start tracking state updates

// now you can use examplePiniaStore as usual pinia store (destructure values or return it as a whole etc)
```


## Options

Vous pouvez personnaliser le comportement du plugin avec des options pour assainir vos données. Ils sont similaires à ceux du plugin standard `createLogger`.


```js
trackerVuex({
  filter (mutation, state) {
    // returns `true` if a mutation should be logged
    // `mutation` is a `{ type, payload }`
    return mutation.type !== "aBlacklistedMutation";
  },
  transformer (state) {
    // transforms the state before logging it.
    // for example return only a specific sub-tree
    return state.subTree;
  },
  mutationTransformer (mutation) {
    // mutations are logged in the format of `{ type, payload }`
    // we can format it any way we want.
    return mutation.type;
  },
})
```

